trunk/Archive2/c0/8bee816d2bc36c/output
main.cpp: In instantiation of 'struct variant<>':
main.cpp:7:15:   required from here
main.cpp:3:5: error: static assertion failed: empty variant is illegal
     static_assert(sizeof...(bounded_types) > 0, "empty variant is illegal");
     ^
